Fix color dot and event alignment

--- a/css/fullcalendar.scss
+++ b/css/fullcalendar.scss
@@ -233,6 +233,10 @@
 		word-break: break-all;
 		white-space: normal;
 	}
+
+	:not(.fc-timegrid-event-short) > .fc-event-main .fc-event-title-container {
+		width: 100%;
+	}
 }
 
 .fc-v-event {
@@ -255,6 +259,10 @@
 	}
 	.fc-daygrid-day-frame {
 		min-height: 150px !important;
+	}
+
+	.fc-event-main-frame {
+		flex-wrap: wrap;
 	}
 }
 .fc-daygrid-day-events {
